--- a/WCFMiddleware/WCFServer/App.config
+++ b/WCFMiddleware/WCFServer/App.config
@@ -1,6 +1,49 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework"
+          type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+          requirePermission="false"/>
+    </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
+  <system.serviceModel>
+    <bindings>
+      <netTcpBinding>
+        <binding name="ServerBinding">
+          <security mode="Message"/>
+        </binding>
+      </netTcpBinding>
+    </bindings>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="mexBehavior">
+          <serviceMetadata httpGetEnabled="true"/>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+    <services>
+      <service behaviorConfiguration="mexBehavior" name="WCFMiddleware.ServerEntryPoint">
+        <endpoint address="net.tcp://localhost:8010/Serveur/Service" binding="netTcpBinding" bindingConfiguration="ServerBinding" name="ServerEntryPoint"
+          contract="WCFContract.IServerEntryPoint"/>
+        <endpoint address="http://localhost:8011/Serveur/Mex" binding="mexHttpBinding" bindingConfiguration="" name="mex" contract="IMetadataExchange"/>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://WCF/service"/>
+          </baseAddresses>
+        </host>
+      </service>
+    </services>
+  </system.serviceModel>
+  <connectionStrings>
+    <add name="WCF" connectionString="Server=localhost;Database=WCF;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
+    </providers>
+  </entityFramework>
+
 </configuration>
