Show file + debug login and register
Added showing file to decrypt in listbox
Use of app.config for configuring some data from msg and location of file to decrypt.
Debugged login and register logic (problem was with msg.data
Management of exception started for msg communication with middleware.

TODO
Reformat alert and result from msg
selection of file 
Sending file to middleware

--- a/WCFClientDecrypt/WCFClientDecrypt/WCFClientDecrypt.csproj
+++ b/WCFClientDecrypt/WCFClientDecrypt/WCFClientDecrypt.csproj
@@ -143,5 +143,8 @@
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="fileToDecrypt\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
