--- a/WCFMiddleware/WCFServer/App.config
+++ b/WCFMiddleware/WCFServer/App.config
@@ -31,7 +31,7 @@
         <endpoint address="http://localhost:8011/Serveur/Mex" binding="mexHttpBinding" bindingConfiguration="" name="mex" contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://WCF/service"/>
+            <add baseAddress="http://localhost:8012/WCF/service"/>
           </baseAddresses>
         </host>
       </service>
