Implemented IsDecrypted Request + display response
Can now send IsDecrypted Request to server automatically after Decrypt Request
Receive response and display it in specific field
Only try once for now

TODO
Asynchronous Request 
Automatic delay try
Using Thread

--- a/WCFClientDecrypt/WCFClientDecrypt/App.config
+++ b/WCFClientDecrypt/WCFClientDecrypt/App.config
@@ -7,7 +7,7 @@
     <add key="tokenApp" value="4ppT0k3n" />
     <add key="appVersion" value="V1"/>
     <add key="fileLocation" value="" />
-    <add key="test" value="y" />
+    <add key="test" value="n" />
   </appSettings>
   <system.serviceModel>
     <bindings>
