Auto stash before merge of "master" and "origin/master"

--- a/WCFMiddleware/WCFDAL/App.config
+++ b/WCFMiddleware/WCFDAL/App.config
@@ -7,7 +7,7 @@
           requirePermission="false"/>
     </configSections>
   <connectionStrings>
-    <add name="WCF" connectionString="Server=ROBIN;Database=WCF;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
+    <add name="WCF" connectionString="Server=EVERSTORMZ-PC;Database=WCF;Trusted_Connection=True;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
