--- a/WCFMiddleware/WCFServer/App.config
+++ b/WCFMiddleware/WCFServer/App.config
@@ -10,10 +10,18 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
   <system.serviceModel>
+    <client>
+      <endpoint address="http://localhost:12080/FileReceiverService/FileReceiverService"
+        binding="basicHttpBinding" bindingConfiguration="FileReceiverPortBinding"
+        contract="JEEWebservice.FileReceiverEndp" name="FileReceiverPort" />
+    </client>
     <bindings>
+      <basicHttpBinding>
+        <binding name="FileReceiverPortBinding" />
+      </basicHttpBinding>
       <netTcpBinding>
         <binding name="ServerBinding">
-          <security mode="Message"/>
+          <security mode="Message" />
         </binding>
       </netTcpBinding>
     </bindings>
