--- a/WCFMiddleware/WCFMiddleware/App.config
+++ b/WCFMiddleware/WCFMiddleware/App.config
@@ -11,4 +11,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="FileReceiverPortBinding" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:12080/FileReceiverService/FileReceiverService"
+        binding="basicHttpBinding" bindingConfiguration="FileReceiverPortBinding"
+        contract="JEEWebservice.FileReceiverEndp" name="FileReceiverPort" />
+    </client>
+  </system.serviceModel>
 </configuration>
