Decrypt update - Message security update - Decryption process now runs in a thread to allow main thread to return that decryption started correctly. - Message security is now set-up to use Windows authentication

--- a/WCFMiddleware/WCFServer/App.config
+++ b/WCFMiddleware/WCFServer/App.config
@@ -21,7 +21,9 @@
       </basicHttpBinding>
       <netTcpBinding>
         <binding name="ServerBinding">
-          <security mode="Message" />
+          <security mode="Message">
+            <message clientCredentialType="Windows" />
+          </security>
         </binding>
       </netTcpBinding>
     </bindings>
