--- a/WCFClientDecrypt/WCFClientDecrypt/WCFClientDecrypt.csproj
+++ b/WCFClientDecrypt/WCFClientDecrypt/WCFClientDecrypt.csproj
@@ -65,6 +65,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
+    <Compile Include="Fake_middleware_test.cs" />
     <Compile Include="User.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
