--- a/WCFClientDecrypt/WCFClientDecrypt/WCFClientDecrypt.csproj
+++ b/WCFClientDecrypt/WCFClientDecrypt/WCFClientDecrypt.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Fake_middleware_test.cs" />
+    <Compile Include="ResultHandler.cs" />
     <Compile Include="User.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
