find secret - encoding accented words - cleaning - BDD
Accented words wasn't recognized in the BDD because they were encoded with "ISO-8859-1" instead of "UTF-8"

--- a/JEEPart/queueMessageConsumer-ejb/queueMessageConsumer-ejb/pom.xml
+++ b/JEEPart/queueMessageConsumer-ejb/queueMessageConsumer-ejb/pom.xml
@@ -16,6 +16,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc6</artifactId>
+            <version>11.2.0.4</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
