--- a/WCFMiddleware/WCFMiddleware/packages.config
+++ b/WCFMiddleware/WCFMiddleware/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.1" targetFramework="net472" />
+  <package id="NLog" version="4.7.2" targetFramework="net472" />
 </packages>
